set(TARGET_NAME Alimer.Direct3D11)

file (GLOB_RECURSE HEADER_FILES *.h *.inl)
file (GLOB_RECURSE SOURCE_FILES *.cpp)

#alimer_add_plugin(Alimer.Direct3D11 ${SOURCE_FILES})
add_library(${TARGET_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(${TARGET_NAME} Alimer)

install(TARGETS ${TARGET_NAME}
    LIBRARY DESTINATION ${DEST_LIBRARY_DIR_CONFIG}
    RUNTIME DESTINATION ${DEST_BIN_DIR_CONFIG}
    ARCHIVE DESTINATION ${DEST_ARCHIVE_DIR_CONFIG}
    BUNDLE  DESTINATION ${DEST_BIN_DIR_CONFIG}
)

set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "Plugins")
