set(TARGET_NAME Alimer.Vulkan)

file (GLOB SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
)

alimer_add_plugin(${TARGET_NAME} "${SOURCE_FILES}")
target_link_libraries(${TARGET_NAME} PRIVATE volk vma)

install(TARGETS ${TARGET_NAME}
    LIBRARY DESTINATION ${DEST_LIBRARY_DIR_CONFIG}
    RUNTIME DESTINATION ${DEST_BIN_DIR_CONFIG}
    ARCHIVE DESTINATION ${DEST_ARCHIVE_DIR_CONFIG}
    BUNDLE  DESTINATION ${DEST_BIN_DIR_CONFIG}
)
